--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 				<li>
 					<a href="lesson5/index.html">lesson5</a>
 				</li>
+				<li>
+					<a href="lesson6/index.html">lesson6</a>
+				</li>
 			</ul>
 		</div>
 	</body>
