--- a/lesson5/index.html
+++ b/lesson5/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-	<title>Our first template</title>
+	<title>lesson5</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<link href="../style/reset.css" rel="stylesheet" type="text/css">
 	<link href="style/style.css" rel="stylesheet" type="text/css">
@@ -127,7 +127,7 @@
 				</div>
 			</div>
 		<div class="footer">
-			<p class="almost_black">2011 © DuckFiles.com</p>
+			<p>2011 &#169 DuckFiles.com</p>
 		</div>
 	</div>
 </body>
