--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -10,23 +10,23 @@
 	<div class="wrapper">
 		<div class="header">
 			<div class="logo">
-				<img src="img/logo.png" alt="M2M-logo"><p>managers to managers</p>
+				<img src="img/logo.png" alt="M2M-logo"><span>managers to managers</span>
 			</div>
 			<ul class="nav-top">
 				<li>
-					<a href="#">регистрация</a>
+					<a href="#" class="enter-border">регистрация</a>
 				</li>
 				<li>
 					<a href="#" class="active">вход</a>
 				</li>
 			</ul>
-			<h4>Сообщество ІТ-компаний города Черкассы</h4>
+			<h3>Сообщество ІТ-компаний города Черкассы</h3>
 			<ul class="nav-bottom">
 				<li>
 					<a href="#" class="active">Главная</a>
 				</li>
 				<li>
-					<a href="#">Цель проекта</a>
+					<a href="#" class="nav-border">Цель проекта</a>
 				</li>
 				<li>
 					<a href="#">Компании</a>
@@ -37,23 +37,23 @@
 			<div class="sidebar">
 				<h2><a href="#">Категории   <img src="img/strelka.png" alt="strelka"></a></h2>
 				<ul class="category-list">
-					<li><img src="img/arrow.png" alt="sidebar-strelka">CMS</li>
-					<li><img src="img/arrow.png" alt="sidebar-strelka">Desing Patterns</li>
-					<li><img src="img/arrow.png" alt="sidebar-strelka">CMS</li>
-					<li><img src="img/arrow.png" alt="sidebar-strelka">Desing Patterns</li>
-					<li><img src="img/arrow.png" alt="sidebar-strelka">CMS</li>
-					<li><img src="img/arrow.png" alt="sidebar-strelka">Desing Patterns</li>
-					<li><img src="img/arrow.png" alt="sidebar-strelka">CMS</li>
-					<li><img src="img/arrow.png" alt="sidebar-strelka">Desing Patterns</li>
-					<li><img src="img/arrow.png" alt="sidebar-strelka">CMS</li>
-					<li><img src="img/arrow.png" alt="sidebar-strelka">Desing Patterns</li>
-					<li><img src="img/arrow.png" alt="sidebar-strelka">CMS</li>
-					<li><img src="img/arrow.png" alt="sidebar-strelka">Desing Patterns</li>
-					<li><img src="img/arrow.png" alt="sidebar-strelka">CMS</li>
-					<li><img src="img/arrow.png" alt="sidebar-strelka">Desing Patterns</li>
+					<li><img src="img/arrow.png" alt="sidebar-strelka"> CMS</li>
+					<li><img src="img/arrow.png" alt="sidebar-strelka"> Desing Patterns</li>
+					<li><img src="img/arrow.png" alt="sidebar-strelka"> CMS</li>
+					<li><img src="img/arrow.png" alt="sidebar-strelka"> Desing Patterns</li>
+					<li><img src="img/arrow.png" alt="sidebar-strelka"> CMS</li>
+					<li><img src="img/arrow.png" alt="sidebar-strelka"> Desing Patterns</li>
+					<li><img src="img/arrow.png" alt="sidebar-strelka"> CMS</li>
+					<li><img src="img/arrow.png" alt="sidebar-strelka"> Desing Patterns</li>
+					<li><img src="img/arrow.png" alt="sidebar-strelka"> CMS</li>
+					<li><img src="img/arrow.png" alt="sidebar-strelka"> Desing Patterns</li>
+					<li><img src="img/arrow.png" alt="sidebar-strelka"> CMS</li>
+					<li><img src="img/arrow.png" alt="sidebar-strelka"> Desing Patterns</li>
+					<li><img src="img/arrow.png" alt="sidebar-strelka"> CMS</li>
+					<li><img src="img/arrow.png" alt="sidebar-strelka"> Desing Patterns</li>
 				</ul>
 				<div class="rss">
-					<a href="#"><img src="img/rss.png" alt="rss"><span class="rss-color">RSS</span></a>
+					<a href="#"><img src="img/rss.png" alt="rss" class="img"><span class="rss-color">RSS</span></a>
 				</div>
 				<ul class="category-logo">
 					<li><a href="#"><img src="img/master-of-kode.png" alt="master-of-kode"></a></li>
@@ -78,7 +78,7 @@
 								<dd>20</dd>
 							<dt>сайт</dt>
 								<dd><a href="#">www.kyosho.org</a></dd>
-							<dt>СЕО</dt>
+							<dt  class="ceo-nomargin">СЕО</dt>
 								<dd>Agent Anderson Smith</dd>
 								<dd><a href="#"><img src="img/phone.png" alt="phone"></a> +1 185 8745-254</dd>
 								<dd><a href="#"><img src="img/skype.png" alt="skype"></a> smithy</dd>
