--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 				<li>
 					<a href="lesson6/index.html">lesson6</a>
 				</li>
+				<li>
+					<a href="lesson7/index.html">lesson7</a>
+				</li>
 			</ul>
 		</div>
 	</body>
