--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -92,25 +92,21 @@
 		<section class="section_four">
 			<div class="menu">
 				<div class="menu_one">
-					<h2>Ipsum dolor sit amet</h2>
+					<a href="#"><img src="img/layer-7.png" alt="layer-7" width=588 height=407 align=right class="img_right"></a>
+					<h1>Ipsum dolor sit amet</h1>
 					<p>Nam accumsan nunc sit amet elementum sollicitudin. Integer vel lacus eget tortor lobortis tincidunt sed eu dolor. Phasellus cursus augue ac pulvinar cursus.</p>
-					<p>Quisque ut erat ornare, feugiat turpis a, fringilla felis. Nulla molestie lorem et orci sagittis, et accumsan ex porta.</p>
+					<p class="otstup_top">Quisque ut erat ornare, feugiat turpis a, fringilla felis. Nulla molestie lorem et orci sagittis, et accumsan ex porta.</p>
 					<div class="section_four_button">
-						<a href="#">Read more</a>
-					</div>
-					<div class="img_right">
-						<a href="#"><img src="img/layer-7.png" alt="layer-7"></a>
+						<a href="#">Sign up</a>
 					</div>
 				</div>
 				<div class="menu_two">
-					<div class="img_left">	
-						<a href="#"><img src="img/layer-8.png" alt="layer-8"></a>
-					</div>
-					<h2>Lorem ipsum</h2>
+						<a href="#"><img src="img/layer-8.png" alt="layer-8" width=588 height=407 align=left></a>
+					<h1>Ipsum dolor sit amet</h1>
 					<p>Nam accumsan nunc sit amet elementum sollicitudin. Integer vel lacus eget tortor lobortis tincidunt sed eu dolor. Phasellus cursus augue ac pulvinar cursus.</p>
+					<p class="otstup_top">Quisque ut erat ornare, feugiat turpis a, fringilla felis. Nulla molestie lorem et orci sagittis, et accumsan ex porta.</p>
 					<div class="section_four_button">
-						<p>Quisque ut erat ornare, feugiat turpis a, fringilla felis. Nulla molestie lorem et orci sagittis, et accumsan ex porta.</p>
-						<a href="#">Read more</a>
+						<a href="#">Sign up</a>
 					</div>
 				</div>		
 			</div>
