--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -8,112 +8,119 @@
 </head>
 <body>
 	<header>
-		<div class="logo">
-			<a href="#"><h1>Panakeia</h1><span>Free PSD template</span></a>
-		</div>
-		<nav class="nav">
-				<a href="#">Fusce at</a>
-				<a href="#">Facilisis</a>
-				<a href="#" class="active">Ante donec</a>
-				<a href="#">Blandit rhoncus</a>
-				<a href="#">Placerat</a>
-		</nav>
-	</header>
-	<div>
-		<section class="section_one">
-			<div class="header">
-				<h1>Integer at tortor ut magna</h1>
-				<h3>finibus lobortis sed quis tellus</h3>
+		<div class="container">
+			<div class="logo">
+				<a href="#">
+					<h1>Panakeia</h1>
+					<span>Free PSD template</span>
+				</a>
 			</div>
+			<nav>
+				<ul>
+					<li><a href="#">Fusce at</a></li>
+					<li><a href="#">Facilisis</a></li>
+					<li><a href="#" class="active">Ante donec</a></li>
+					<li><a href="#">Blandit rhoncus</a></li>
+					<li><a href="#">Placerat</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+	<section class="glavnaya_news">
+		<div class="container">
+			<h1>Integer at tortor ut magna</h1>
+			<h2>finibus lobortis sed quis tellus</h2>
 			<div class="menu">
-				<div class="menu_one">
-					<a href="#"><img src="img/layer-1.png" alt="Tincidunt"></a>
+				<div class="tincidunt">
+					<img src="img/layer-1.png" alt="Tincidunt">
 					<h2>Tincidunt</h2>
 					<p>Phasellus arcu justo, ullamcorper non diam sit amet, luctus condimentum metus. Nullam tempus egestas efficitur. Sed quam dolor.</p>
 				</div>
-				<div class="menu_two">
-					<a href="#"><img src="img/layer-2.png" alt="Duis bibendum"></a>
+				<div class="duis_bibendum">
+					<img src="img/layer-2.png" alt="Duis bibendum">
 					<h2>Duis bibendum</h2>
 					<p>Ut arcu arcu, faucibus eu risus blandit, pulvinar viverra justo. Phasellus arcu justo, ullamcorper non diam sit amet, luctus condimentum metus. In hac habitasse platea dictumst.</p>
 				</div>
-				<div class="menu_three">
-					<a href="#"><img src="img/layer-3.png" alt="Donec ligula"></a>
+				<div class="donec_ligula">
+					<img src="img/layer-3.png" alt="Donec ligula">
 					<h2>Donec ligula</h2>
 					<p>Nullam tempus egestas efficitur. Sed quam dolor, vulputate sed mattis et, sodales quis orci. Ut arcu arcu, faucibus eu risus blandit,.</p>
 				</div>
 			</div>
-			<div class="section_one_button">
+			<div class="glavnaya_news_button">
 				<a href="#">Read more</a>
-			</div>	
-		</section>
-		<section class="section_two">
-			<div class="header">
-				<h1>Our news</h1>
 			</div>
+		</div>		
+	</section>
+	<section class="news">
+		<div class="container">
+			<h1>Our news</h1>
 			<div class="menu">
 				<div class="menu_one">
-					<a href="#"><img src="img/layer-4.png" alt="Lorem ipsum"></a>
+					<img src="img/layer-4.png" alt="Lorem ipsum">
 					<h2>Lorem ipsum</h2>
 					<p>Est a elit scelerisque vestibulum. Donec est sem, lobortis sit amet imperdiet vel, pretium lobortis erat. Nulla vitae hendrerit odio.</p>
-					<div class="section_two_button">
+					<div class="news_button">
 						<a href="#">Read more</a>
 					</div>	
 				</div>
 				<div class="menu_two">
-					<a href="#"><img src="img/layer-5.png" alt="Lorem ipsum"></a>
+					<img src="img/layer-5.png" alt="Lorem ipsum">
 					<h2>Lorem ipsum</h2>
 					<p>Est a elit scelerisque vestibulum. Donec est sem, lobortis sit amet imperdiet vel, pretium lobortis erat. Nulla vitae hendrerit odio.</p>
-					<div class="section_two_button">
+					<div class="news_button">
 						<a href="#">Read more</a>
 					</div>	
 				</div>
 				<div class="menu_three">
-					<a href="#"><img src="img/layer-6.png" alt="Lorem ipsum"></a>
+					<img src="img/layer-6.png" alt="Lorem ipsum">
 					<h2>Lorem ipsum</h2>
 					<p>Est a elit scelerisque vestibulum. Donec est sem, lobortis sit amet imperdiet vel, pretium lobortis erat. Nulla vitae hendrerit odio.</p>
-					<div class="section_two_button">
+					<div class="news_button">
 						<a href="#">Read more</a>
 					</div>	
 				</div>
 			</div>
-		</section>
-		<section class="section_three">
-			<div class="header">
-				<h1>Newsletter</h1>
-				<p>Ut arcu arcu, faucibus eu risus blandit, pulvinar viverra justo. Phasellus arcu justo, ullamcorper non diam sit amet, luctus condimentum metus</p>
-			</div>
+		</div>
+	</section>
+	<section class="newsletter">
+		<div class="container">
+			<h1>Newsletter</h1>
+			<p>Ut arcu arcu, faucibus eu risus blandit, pulvinar viverra justo. Phasellus arcu justo, ullamcorper non diam sit amet, luctus condimentum metus</p>
 			<div class="sign_up">
-				<form name="email" action="#" method="GET">
-    				<input type="email" placeholder="email adress" autofocus>
-  				  	<button class="desktop" type="submit">Sign up</button>
+				<form action="#" method="GET">
+	    			<input type="email" placeholder="email adress" autofocus>
+	  			  	<button type="submit">Sign up</button>
 				</form>	
 			</div>
-		</section>
-		<section class="section_four">
+		</div>
+	</section>
+	<section class="articles">
+		<div class="container">
 			<div class="menu">
 				<div class="menu_one">
-					<a href="#"><img src="img/layer-7.png" alt="layer-7" width=588 height=407 align=right class="img_right"></a>
-					<h1>Ipsum dolor sit amet</h1>
+					<a href="#"><img src="img/layer-7.png" alt="layer-7" width=588 height=407></a>
+					<h2>Ipsum dolor sit amet</h2>
 					<p>Nam accumsan nunc sit amet elementum sollicitudin. Integer vel lacus eget tortor lobortis tincidunt sed eu dolor. Phasellus cursus augue ac pulvinar cursus.</p>
 					<p class="otstup_top">Quisque ut erat ornare, feugiat turpis a, fringilla felis. Nulla molestie lorem et orci sagittis, et accumsan ex porta.</p>
-					<div class="section_four_button">
+					<div class="articles_button_left">
 						<a href="#">Sign up</a>
 					</div>
 				</div>
 				<div class="menu_two">
-						<a href="#"><img src="img/layer-8.png" alt="layer-8" width=588 height=407 align=left></a>
-					<h1>Ipsum dolor sit amet</h1>
+					<a href="#"><img src="img/layer-8.png" alt="layer-8" width=588 height=407></a>
+					<h2>Ipsum dolor sit amet</h2>
 					<p>Nam accumsan nunc sit amet elementum sollicitudin. Integer vel lacus eget tortor lobortis tincidunt sed eu dolor. Phasellus cursus augue ac pulvinar cursus.</p>
 					<p class="otstup_top">Quisque ut erat ornare, feugiat turpis a, fringilla felis. Nulla molestie lorem et orci sagittis, et accumsan ex porta.</p>
-					<div class="section_four_button">
+					<div class="articles_button_right">
 						<a href="#">Sign up</a>
 					</div>
-				</div>		
+				</div>
 			</div>
-		</section>
-	</div>
-	<footer>
-		<div class="footer_top">
+		</div>
+	</section>
+	<section class="prais">
+		<div class="container">
 			<ul>
 				<li><a href="#">Ad litora torquent</a></li>
 				<li><a href="#">Per conubia</a></li>
@@ -122,7 +129,7 @@
 				<li><a href="#">Himenaeos</a></li>
 				<li><a href="#">In consectetur</a></li>
 			</ul>
-			<ul class="">
+			<ul>
 				<li><a href="#">Taciti sociosqu</a></li>
 				<li><a href="#">Ad litora torquent</a></li>
 				<li><a href="#">Per conubia</a></li>
@@ -140,8 +147,10 @@
 				<li><a href="#">Tincidunt</a></li>
 			</ul>
 		</div>
-		<div class="footer_bottom">
-			<p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Try awsome tool for desgners<span><a href="#"> symu.co</a></span></p>
+	</section>	
+	<footer>
+		<div class="container">
+			<p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Try awsome tool for desgners<a href="#"> symu.co</a></p>
 		</div>
 	</footer>
 </body> 
