Added lesson10 & final lesson8

--- a/lesson8/index.html
+++ b/lesson8/index.html
@@ -5,33 +5,32 @@
 	<meta charset="UTF-8">
 	<link href="../style/reset.css" rel="stylesheet" type="text/css">
 	<link href="style/style.css" rel="stylesheet" type="text/css">
+	<link href="style/media.css" rel="stylesheet">
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
 	<section class="shapka">
 		<div class="container">
-			
-				<div class="logo">
-					<a href="#">
-						<p>UIBrush<span>.</span></p>
-					</a>
-				</div>
-				<nav>
-					<ul>
-						<li><a href="#">HOME</a></li>
-						<li><a href="#">FABOUT US</a></li>
-						<li><a href="#">PORTFOLIO</a></li>
-						<li><a href="#">SERVICES</a></li>
-						<li><a href="#">CONTACT US</a></li>
-					</ul>
-				</nav>
-			
+			<div class="logo">
+				<a href="#">
+					<p>UIBrush<span>.</span></p>
+				</a>
+			</div>
+			<nav>
+				<ul>
+					<li><a href="#">HOME</a></li>
+					<li><a href="#">FABOUT US</a></li>
+					<li><a href="#">PORTFOLIO</a></li>
+					<li><a href="#">SERVICES</a></li>
+					<li><a href="#">CONTACT US</a></li>
+				</ul>
+			</nav>
 			<h1>THE ULTIMATE COLLECTION OF FREE PSD TEMPLATES!!</h1>
 			<div class="submit">
 				<a href="#" class="button">DOWNLOAD</a>
 			</div>	
 		</div>		
 	</section>
-
 	<section class="about">
 		<div class="container">
 			<div class="section_header">
@@ -49,70 +48,79 @@
 			</div>
 		</div>
 	</section>
-
 	<section class="portfolio">
 		<div class="container">
 			<div class="section_header">
 				<h1>portfolio</h1>
 				<p>Lorem ipsum dolor sit amet tetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
 			</div>
+			<div>
 			<div class="kartka">
-				<a href="#"><img src="img/woman.png" alt="woman"></a>
+				<a href="#">Read more</a>
+				<img src="img/woman.png" alt="woman">
 				<p>PROJECT ONE<span>Web Design</span></p>
 			</div>
 			<div class="kartka_center">
-				<a href="#"><img src="img/tools.png" alt="tools"></a>
+				<a href="#">Read more</a>
+				<img src="img/tools.png" alt="tools">
 				<p>PROJECT TWO<span>Logo</span></p>
 			</div>
 			<div class="kartka">
-				<a href="#"><img src="img/cutlery.png" alt="cutlery"></a>
+				<a href="#">Read more</a>
+				<img src="img/cutlery.png" alt="cutlery">
 				<p>PROJECT THREE<span>Photo</span></p>
 			</div>
 			<div class="kartka">
-				<a href="#"><img src="img/plane.png" alt="plane"></a>
+				<a href="#">Read more</a>
+				<img src="img/plane.png" alt="plane">
 				<p>PROJECT ONE<span>Web Design</span></p>
 			</div>
 			<div class="kartka_center">
-				<a href="#"><img src="img/canyon.png" alt="canyon"></a>
+				<a href="#">Read more</a>
+				<img src="img/canyon.png" alt="canyon">
 				<p>PROJECT ONE<span>Web Design</span></p>
 			</div>
 			<div class="kartka">
-				<a href="#"><img src="img/river.png" alt="river"></a>
+				<a href="#">Read more</a>
+				<img src="img/river.png" alt="river">
 				<p>PROJECT ONE<span>Web Design</span></p>
+			</div>
 			</div>
 		</div>
 	</section>
-
 	<section class="services">
 		<div class="container">
 			<div class="section_header">
-				<span></span>
 				<h1>services</h1>
 				<p>Lorem ipsum dolor sit amet tetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
 			</div>
 			<div class="tools">
+				<i class="fa fa-camera"></i>
 				<h2>PHOTOGRAPHY</h2>
+				<span class="border"></span>
 				<p>Lorem ipsum dolor sit amet tetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
 				<a href="#">Read More</a>
 			</div>
 			<div class="tools">
+				<i class="fa fa-paint-brush"></i>
 				<h2>PAINTING</h2>
 				<p>Lorem ipsum dolor sit amet tetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
 				<a href="#">Read More</a>
 			</div>
 			<div class="tools">
+				<i class="fa fa-scissors"></i>
 				<h2>VIDEO EDITING</h2>
 				<p>Lorem ipsum dolor sit amet tetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
 				<a href="#">Read More</a>
 			</div>
 			<div class="tools">
+				<i class="fa fa-html5"></i>
 				<h2>WEB DESIGN</h2>
 				<p>Lorem ipsum dolor sit amet tetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
 				<a href="#">Read More</a>
 			</div>
 		</div>
 	</section>
-
 	<section class="contact">
 		<div class="container">
 			<div class="section_header">
@@ -136,11 +144,12 @@
 					<input type="text" name="subject" class="subject" placeholder="Subject...">
 					<textarea name="your_comments" class="textarea" placeholder="Message..."></textarea>
 				</form>
-				<a href="#" class="button">SUBMIT</a>
+				<div class="submit">
+					<a href="#" class="button">SUBMIT</a>
+				</div>
 			</div>
 		</div>
 	</section>
-
 	<footer class=Copyright>
 		<div class="container">
 			<span>Copyright &#169; 2014 <a href="#">UIBrush.</a></span>
