--- a/index.html
+++ b/index.html
@@ -10,25 +10,37 @@
 		<div>
 			<ul>
 				<li>
-					<a href="lesson1/index.html">lesson1</a>
+					<a href="lesson1/index.html" class="button">lesson1</a>
 				</li>
 				<li>
-					<a href="lesson2/index.html">lesson2</a>
+					<a href="lesson2/index.html" class="button">lesson2</a>
 				</li>
 				<li>
-					<a href="lesson33/index.html">lesson3</a>
+					<a href="lesson33/index.html" class="button">lesson3</a>
 				</li>
 				<li>
-					<a href="lesson4/index.html">lesson4</a>
+					<a href="lesson4/index.html" class="button">lesson4</a>
 				</li>
 				<li>
-					<a href="lesson5/index.html">lesson5</a>
+					<a href="lesson5/index.html" class="button">lesson5</a>
 				</li>
 				<li>
-					<a href="lesson6/index.html">lesson6</a>
+					<a href="lesson6/index.html" class="button">lesson6</a>
 				</li>
 				<li>
-					<a href="lesson7/index.html">lesson7</a>
+					<a href="lesson7/index.html" class="button">lesson7</a>
+				</li>
+				<li>
+					<a href="lesson8/index.html" class="button">lesson8</a>
+				</li>
+				<li>
+					<a href="lesson10/index.html" class="button">lesson10</a>
+				</li>
+				<li>
+					<a href="lesson11/index.html" class="button">lesson11</a>
+				</li>
+				<li>
+					<a href="lesson12/index.html" class="button">lesson12</a>
 				</li>
 			</ul>
 		</div>
