Added lesson10 part2

--- a/lesson10/index.html
+++ b/lesson10/index.html
@@ -8,6 +8,10 @@
 	<link href="style/grid.css" rel="stylesheet" type="text/css">
 	<link href="style/style.css" rel="stylesheet" type="text/css">
 	<link href="style/media.css" rel="stylesheet" type="text/css">
+	<link href='https://fonts.googleapis.com/css?family=Lato:700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
@@ -21,7 +25,7 @@
 			</div>
 			<div class="m-col-8 xs-col-6 header-left">
 				<nav class="m-col-8 xs-col-6">
-					<ul>
+					<ul class="nav">
 						<li><a href="#">Overviev</a></li>
 						<li><a href="#">About Fork</a></li>
 						<li><a href="#">Buying Option</a></li>
@@ -34,7 +38,7 @@
 	</header>
 	<section class="hero">
 		<div class="container">
-			<div class="">
+			<div class="fork_app">
 				<h1>Fork APP</h1>
 				<p>A real gamechanger in the world of web development</p>
 				<span>v. 2.8 For Mac and Windows</span>
@@ -45,7 +49,7 @@
 		<div class="container">
 			<div class="download">
 				<a href="#" class="button">Download For Free Now</a>
-				<span>Unlimited 30-Days Trial Period</span>
+				<p>Unlimited 30-Days Trial Period</p>
 			</div>
 			<h1>Revolutionary editor</h1>
 			<p>Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
@@ -70,46 +74,48 @@
 	</section>
 	<section class="features">
 		<div class="container">
-			<div class="">
-				<ul>
-		            <li>
-		              	<div class="xs-col-12 s-col-6 m-col-5">
-		               		<img src="img/icon1.png" alt="icon1">
-		              	</div>
-		             	<div class="">
-			                <h3>Creatred to Make The Web Better</h3>
-			                <p>Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
-		              	</div>
-		            </li>
-		            <li>
-		              	<div class="">
-		               		<img src="img/icon2.png" alt="icon2">
-		            	</div>
-		             	<div class="text-box">
-			                <h3>Incredibly Powerful Tool</h3>
-			                <p>Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat.</p>
-		             	</div>
-		            </li>
-		            <li>
-		             	<div class="">
-		                	<img src="img/icon3.png" alt="icon3">
-		              	</div>
-		              	<div class="text-box">
-		                	<h3>Experimental Stuff</h3>
-		                	<p>Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat.</p>
-		           		</div>
-		            </li>
-		            <li>
-		              	<div class="">
-		                	<img src="img/icon4.png" alt="icon4">
-		             	</div>
-		              	<div class="">
-		                	<h3>Creatred to Make The Web Better</h3>
-		                	<p>Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat.</p>
-		              	</div>
-		            </li>
-	          	</ul>
-	        <div class=""> 	
+			<div class="row">
+				<div class="xs-col-12 s-col-6 m-col-5">
+					<ul>
+			            <li>
+			              	<div>
+			               		<img src="img/icon1.png" alt="icon1">
+			              	</div>
+			             	<div class="text-box">
+				                <h3>Creatred to Make The Web Better</h3>
+				                <p>Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
+			              	</div>
+			            </li>
+			            <li>
+			              	<div>
+			               		<img src="img/icon2.png" alt="icon2">
+			            	</div>
+			             	<div class="text-box">
+				                <h3>Incredibly Powerful Tool</h3>
+				                <p>Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat.</p>
+			             	</div>
+			            </li>
+			            <li>
+			             	<div>
+			                	<img src="img/icon3.png" alt="icon3">
+			              	</div>
+			              	<div class="text-box">
+			                	<h3>Experimental Stuff</h3>
+			                	<p>Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat.</p>
+			           		</div>
+			            </li>
+			            <li>
+			              	<div>
+			                	<img src="img/icon4.png" alt="icon4">
+			             	</div>
+			              	<div class="text-box">
+			                	<h3>Creatred to Make The Web Better</h3>
+			                	<p>Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat.</p>
+			              	</div>
+			            </li>
+		          	</ul>
+		        </div>
+	        <div class="xs-col-12 s-col-6 m-col-7"> 	
 	        	<h1>&#60;Here is what you get&#62;</h1>
 	          	<img src="img/code.png" alt="code">					
 	        </div>   	
@@ -127,26 +133,23 @@
 		        </div>
 		        <span>@Doctors</span>
 		    </div>
-	        <div class="peremotka">
-	        	<i class="fa fa-angle-left"></i>
-			    <p><span><i class="fa fa-at"></i>Pixelbuddha</span>Suspendisse sodales sem est, in scelerisque felis scelerisque in. Aenean faucibus mollis risus. Praesent sit amet erat eget eros.
-				</span>
-				<span>2 hours ago</span>
-				<i class="fa fa-angle-right"></i>
-		        </div>		
+	        <div class="row peremotka">
+	        	<p>
+	        		<i class="fa fa-angle-left"></i><span><i class="fa fa-at"></i>Pixelbuddha</span>Suspendisse sodales sem est, in scelerisque felis scelerisque in. Aenean faucibus mollis risus. Praesent sit amet erat eget eros.<i class="fa fa-angle-right"></i><br>
+					<span>2 hours ago</span>
 			</div>
-			<div class="soc_seti">
+			<div class="row soc_seti">
 				<ul>
 					<li>
-						<a href="#" class="button"><i class="fa fa-github"></i>GitHub</a>
+						<a href="#" class="button_git social"><i class="fa fa-github"></i>GitHub</a>
 						<span>7 352 Followers</span>
 					</li>
 					<li>
-						<a href="#" class="button"><i class="fa fa-twitter"></i>Twitter</a>
+						<a href="#" class="button_twit social"><i class="fa fa-twitter"></i>Twitter</a>
 						<span>136 312 Followers</span>
 					</li>
 					<li>
-						<a href="#" class="button"><i class="fa fa-facebook"></i>Facebook</a>
+						<a href="#" class="button_face social"><i class="fa fa-facebook"></i>Facebook</a>
 						<span>218 092 Subscribers</span>
 					</li>
 				</ul>
@@ -157,27 +160,27 @@
 		<div class="container">
 			<h1>People Are Talking About Fork</h1>
 			<div class="row">
-				<div class="xs-col-6 m-col-4">
+				<div class="xs-col-6 m-col-4 label">
 			        <img src="img/logo1.png" alt="logo1">
 	                <p>Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
 				</div>
-				<div class="xs-col-6 m-col-4">
+				<div class="xs-col-6 m-col-4 label">
 			        <img src="img/logo2.png" alt="logo2">
 	                <p>Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
 				</div>	
-				<div class="xs-col-6 m-col-4">
+				<div class="xs-col-6 m-col-4 label">
 			        <img src="img/logo3.png" alt="logo3">
 	                <p>Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
 				</div>
-				<div class="xs-col-6 m-col-4">
+				<div class="xs-col-6 m-col-4 label">
 			        <img src="img/logo4.png" alt="logo4">
 	                <p>Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
 				</div>
-				<div class="xs-col-6 m-col-4">
+				<div class="xs-col-6 m-col-4 label">
 			        <img src="img/logo5.png" alt="logo5">
 	                <p>Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
 				</div>
-				<div class="xs-col-6 m-col-4">
+				<div class="xs-col-6 m-col-4 label">
 			        <img src="img/logo6.png" alt="logo6">
 	                <p>Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
 				</div>
@@ -188,44 +191,41 @@
 		<div class="container">
 			<h1>Fork Subscription Pricing</h1>
 			<div class="row">
-				<div class="s-col-3">
+				<div class="s-col-3 price">
 					<h2>Students</h2>
-					<span class="">$29</span>
-					<div>per month</div>
-					<p class="">Personal License</p>
+					<div>$29</div>
+					<span>per month</span>
+					<p>Personal License</p>
 					<a href="#" class="button white">purchase</a>
-					</div>
 				</div>
-				<div class="s-col-3">
+				<div class="s-col-3 price">
 					<h2>Professional</h2>
-					<span class="">$59</span>
-					<div>per month</div>
-					<p class="">Professional License Email Support</p>
+					<div>$59</div>
+					<span>per month</span>
+					<p>Professional License Email Support</p>
 					<a href="#" class="button white">purchase</a>
-					</div>
 				</div>
-				<div class="s-col-3">
+				<div class="s-col-3 price">
 					<h2>Agency</h2>
-					<span class="">$99</span>
-					<div>per month</div>
-					<p class="">1-12 Team Members Phone Support</p>
+					<div>$99</div>
+					<span>per month</span>
+					<p>1-12 Team Members Phone Support</p>
 					<a href="#" class="button white">purchase</a>
-					</div>
 				</div>
-				<div class="s-col-3">
+				<div class="s-col-3 price">
 					<h2>Enterprise</h2>
-					<span class="">$159</span>
-					<div>per month</div>
-					<p class="">Unlimited Team Members 24/ 7 Phone Support</p>
+					<div>$159</div>
+					<span>per month</span>
+					<p>Unlimited Team Members 24/ 7 Phone Support</p>
 					<a href="#" class="button white">purchase</a>
-					</div>
 				</div>
-				<p>
-					Duis lobortis arcu sed arcu tincidunt feugiat. Nulla nisi mauris, facilisis vitae aliquet id, imperdiet quis nibh. Donec eget elit eu libero tincidunt consequat nec elementum orci. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
-				</p>
 			</div>
+			<p>
+				Duis lobortis arcu sed arcu tincidunt feugiat. Nulla nisi mauris, facilisis vitae aliquet id, imperdiet quis nibh. Donec eget elit eu libero tincidunt consequat nec elementum orci. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
+			</p>
 		</div>
 	</section>
+		<!--
 	<section class="newsletter">
 		<div class="container">
 			<h1>Subscribe To Our Newsletter</h1>
@@ -326,5 +326,6 @@
 			</div>
 		</div>		
 	</footer>
+	-->
 </body>
 </html>
