--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>GeekHub</title>
+		<meta charset="utf-8">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<link href="style/reset.css" rel="stylesheet" type="text/css">
 		<link href="style/style.css" rel="stylesheet" type="text/css">
@@ -41,6 +42,9 @@
 				</li>
 				<li>
 					<a href="lesson12/index.html" class="button">lesson12</a>
+				</li>
+				<li>
+					<a href="lesson13/index.html" class="button">lesson13</a>
 				</li>
 			</ul>
 		</div>
