added lesson14 to index

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
 				<li>
 					<a href="lesson13/index.html" class="button">lesson13</a>
 				</li>
+				<li>
+					<a href="lesson14/index.html" class="button">lesson14</a>
+				</li>
 			</ul>
 		</div>
 	</body>
